# Algorithms-and-Data-Structures

./: LICENSE  README.md
avl_tree/: CMakeLists.txt  avl_tree.c  avl_tree.h  main.c
binary_search_tree/: CMakeLists.txt  binary_search_tree.c  binary_search_tree.h  main.c
binary_tree/: CMakeLists.txt  binary_tree.c  binary_tree.h  doubly_linked_list.c  doubly_linked_list.h  main.c
graph/: CMakeLists.txt  graph.c  graph.h  list.c  list.h  main.c  queue.c  queue.h
hash_table/: CMakeLists.txt  hash_table.c  hash_table.h  linked_list.c  linked_list.h  main.c
heaps/max_heap/: CMakeLists.txt  max_heap.c  max_heap.h  test.c
heaps/min_heap/: CMakeLists.txt  min_heap.c  min_heap.h  test.c
linked_list/doubly_linked_list/: CMakeLists.txt  doubly_linked_list.c  doubly_linked_list.h  main.c
linked_list/linked_list/: CMakeLists.txt  linked_list.c  linked_list.h  main.c
queue/array_queue/: CMakeLists.txt  main.c  priority_queue_pointer.h  queue.c  queue.h
queue/deque/: CMakeLists.txt  deque.c  deque.h  main.c
queue/priority_queue_pointer/: CMakeLists.txt  main.c  priority_queue_pointer.c
stack/array_stack/: CMakeLists.txt  array_stack.c  array_stack.h
stack/stack/: CMakeLists.txt  main.c  stack.c  stack.h
